(fix) adjust visibility of delete button on card instead of on delete modal

--- a/src/components/DeleteConfirmationModal/DeleteConfirmationModal.css
+++ b/src/components/DeleteConfirmationModal/DeleteConfirmationModal.css
@@ -72,12 +72,13 @@
   cursor: pointer;
 }
 
-.modal-button__delete-button_visible {
-  visibility: none;
-  opacity: 0;
-}
-
-.modal-button__delete-button_hidden {
+.item-modal__delete-item_visible {
   visibility: visible;
   opacity: 1;
+}
+
+.item-modal__delete-item_hidden {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
 }
